# auto-insurance

./: .env.example  .gitignore  ARCHITECTURE.md  COMPLIANCE.md  DECISIONS.md  GOVERNANCE.md  HANDOFF.md  IMPLEMENTATION_COMPLETE.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.customer.yml  docker-compose.yml
.github/: pull_request_template.md
contracts/: README.md
docs/: 00_current_state_assessment.md  00_documentation_index.md  00_vision.md  01_high_level_design.md  02_low_level_design.md  03_execution_plan.md  04_phase1_completion_report.md  04_product_strategy.md  05_ai_agent_architecture.md  05_production_gap_closure.md  06_production_hardening_runbook.md  06_risk_appetite_engine.md  07_employee_operating_manual.md  07_quote_engine.md  08_claims_crm_operating_guide.md  08_policy_admin.md  09_blockchain_security_review.md  09_claims_architecture.md  10_blockchain_architecture.md  10_markdown_cleanup_register.md  12_data_model.md  (+13 more)
services/auth-service/: Dockerfile  pyproject.toml
services/auth-service/auth_service/api/: app.py
services/auth-service/auth_service/config/: settings.py
services/blockchain-gateway/: .env.example  Dockerfile  pyproject.toml
services/blockchain-gateway/blockchain_gateway/: __init__.py  gateway.py  outbox.py  reconciliation.py  signer_policy.py
services/blockchain-gateway/blockchain_gateway/api/: app.py
services/blockchain-gateway/blockchain_gateway/config/: settings.py
services/blockchain-gateway/tests/: __init__.py  test_gateway.py  test_outbox.py  test_reconciliation.py  test_signer_policy.py
services/claims-service/: Dockerfile  alembic.ini  pyproject.toml
services/claims-service/alembic/: env.py
services/claims-service/claims_service/: __init__.py  api.py  config.py  database.py  models.py  repository.py
services/claims-service/claims_service/integrations/: __init__.py  customer_validation.py
services/claims-service/migrations/: 001_phase1_claims_schema.sql
services/claims-service/tests/: test_claims_api.py  test_claims_repository.py  test_customer_validation.py
services/customer-service/: Dockerfile  ENVIRONMENT.md  README.md  alembic.ini  pyproject.toml
services/customer-service/alembic/: env.py
services/customer-service/alembic/versions/: 0001_phase1_customer_baseline.py
services/customer-service/customer_service/: __init__.py  api.py  config.py  database.py  models.py
services/customer-service/migrations/: 001_phase1_customer_schema.sql
services/customer-service/tests/: test_customer_api.py
services/policy-service/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
services/policy-service/alembic/: env.py
services/policy-service/alembic/versions/: 0001_phase1_policy_baseline.py
services/policy-service/migrations/: 001_phase1_policy_schema.sql
services/policy-service/policy_service/: compliance.py
services/policy-service/policy_service/api/: __init__.py  app.py
services/policy-service/policy_service/config/: __init__.py  settings.py
services/policy-service/policy_service/domain/: models.py
services/policy-service/policy_service/engine/: __init__.py  policy_engine.py
services/policy-service/policy_service/integrations/: __init__.py  customer_validation.py
services/policy-service/policy_service/security/: ownership.py
services/policy-service/policy_service/storage/: __init__.py  database.py  orm.py  policy_repository.py  policy_store.py
services/policy-service/tests/: test_customer_validation.py  test_policy_api.py  test_policy_repository.py  test_policy_service.py
services/quote-service/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
services/quote-service/alembic/: env.py
services/quote-service/alembic/versions/: 0001_phase1_quote_baseline.py
services/quote-service/data/: risk-appetite-policy.yml
services/quote-service/data/sample-products/: sample_personal_auto_v1.yml
services/quote-service/migrations/: 001_phase1_quote_schema.sql
services/quote-service/quote_service/: __init__.py
services/quote-service/quote_service/api/: __init__.py  app.py
services/quote-service/quote_service/config/: __init__.py  settings.py
services/quote-service/quote_service/domain/: __init__.py  models.py
services/quote-service/quote_service/engine/: __init__.py  expiration_handler.py  explainability.py  quote_engine.py
services/quote-service/quote_service/integrations/: __init__.py  customer_validation.py
services/quote-service/quote_service/security/: ownership.py
services/quote-service/quote_service/storage/: __init__.py  database.py  orm.py  quote_repository.py  quote_store.py
services/quote-service/tests/: test_customer_validation.py  test_quote_api.py  test_quote_repository.py  test_quote_service.py
services/risk-appetite-service/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
services/risk-appetite-service/alembic/: env.py
services/risk-appetite-service/alembic/versions/: 0001_phase1_risk_baseline.py
services/risk-appetite-service/data/: risk-appetite-policy.yml
services/risk-appetite-service/migrations/: 001_phase1_risk_schema.sql
services/risk-appetite-service/risk_appetite_service/: __init__.py
services/risk-appetite-service/risk_appetite_service/api/: app.py
services/risk-appetite-service/risk_appetite_service/config/: __init__.py  settings.py
services/risk-appetite-service/risk_appetite_service/domain/: models.py
services/risk-appetite-service/risk_appetite_service/engine/: risk_engine.py
services/risk-appetite-service/risk_appetite_service/storage/: database.py  orm.py  risk_repository.py
services/risk-appetite-service/tests/: test_risk_appetite.py  test_risk_repository.py
(+64 files in other folders)
