[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blockchain-gateway"
version = "0.1.0"
description = "Blockchain Gateway - wraps PolicyRegistry and AuditEventRegistry contracts with outbox pattern, signer policy enforcement, and reconciliation."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "web3>=7.6.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
