[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claims-service"
version = "0.1.0"
description = "Claims Service - FNOL intake, claim lifecycle, evidence metadata, and approvals"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy>=2.0",
    "insurance-security",
    "insurance-observability",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
]

[tool.hatch.build.targets.wheel]
packages = ["claims_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
