[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "customer-service"
version = "0.1.0"
description = "Customer/account source-of-truth service for tenant and customer ownership"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy>=2.0",
    "insurance-security",
    "insurance-observability",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
]

[tool.hatch.build.targets.wheel]
packages = ["customer_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
