[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "policy-service"
version = "0.1.0"
description = "Policy Service - policy lifecycle, bind flow, audit packets, human approval."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.21.0",
    "uuid-utils>=0.10.0",
    "pydantic-extra-types>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.125.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
