[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "policy-service"
version = "0.1.0"
description = "Policy Service - policy lifecycle, bind flow, audit packets, human approval."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.36",
    "insurance-security",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
