[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "risk-appetite-service"
version = "0.1.0"
description = "Risk Appetite Service - exposure checks, capital/reserve impact, reinsurance"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "shared-types",
    "insurance-security",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
]

[tool.hatch.build.targets.wheel]
packages = ["risk_appetite_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
